# Social-Media-API

./: .env-example  .gitignore  README.md  compose.yml  docker-compose.yml  nginx.conf  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  security.py  settings.py
app/routes/: auth.py  comments.py  posts.py  user.py
migrations/: env.py
migrations/versions/: 1618d342fd45_fix_deleted_follower_and_following_.py  24b75fab6a2f_fix_deleted_follower_and_following_.py  8d08adacc877_initial_migration.py  93ce67b23120_fix_added_id_column_to_follow.py  d5c411d47606_created_tables_for_instagram_clone.py
