[project]
name = "api-instagram-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[all]>=0.116.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
